--- a/mathslide.html
+++ b/mathslide.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Ten | MathPalm</title>
+    <title>Michael Ten | MathSlide</title>
     <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -36,7 +36,7 @@
 
 
     <div style="position:relative; width:100%; height:100vh;">
-        <iframe src="mathpalm_source.html"
+        <iframe src="mathslide_source.html"
             style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;"></iframe>
     </div>
     
