--- a/sitemap.html
+++ b/sitemap.html
@@ -90,8 +90,12 @@
                     <span class="file-path">/ chordsmaker.html</span>
                 </li>
                 <li>
-                    <a href="mathpalm.html" class="neon-text-sub">Math Palm</a>
+                    <a href="mathpalm.html" class="neon-text-sub">MathPalm</a>
                     <span class="file-path">/ mathpalm.html</span>
+                </li>
+                <li>
+                    <a href="mathslide.html" class="neon-text-sub">MathSlide</a>
+                    <span class="file-path">/ mathslide.html</span>
                 </li>
                 <li>
                     <a href="michelle.html" class="neon-text-sub">Michelle</a>
