Added auto Tetris

--- a/sitemap.html
+++ b/sitemap.html
@@ -102,6 +102,10 @@
                     <span class="file-path">/ michelle.html</span>
                 </li>
                 <li>
+                    <a href="autotetris.html" class="neon-text-sub">Auto Tetris</a>
+                    <span class="file-path">/ autotetris.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ sitemap.html</span>
                 </li>
