Added Image Converter

--- a/resources/sitemap.html
+++ b/resources/sitemap.html
@@ -114,6 +114,10 @@
                     <span class="file-path">/ resources/piano.html</span>
                 </li>
                 <li>
+                    <a href="image_converter.html" class="neon-text-sub">Image Converter</a>
+                    <span class="file-path">/ resources/image_converter.html</span>
+                </li>
+                <li>
                     <a href="sitemap.html" class="neon-text-sub">Site Map</a>
                     <span class="file-path">/ resources/sitemap.html</span>
                 </li>
