--- a/resources/wingchunAI.html
+++ b/resources/wingchunAI.html
@@ -5,7 +5,7 @@
     <title>Michael Ten | Wing Chun AI</title>
 </head>
 
-<body class="experience-page">
+<body>
 
     <div style="position:relative; width:100%; height:100vh;">
         <iframe src="http://student.plkcastar.edu.hk:7860"
