--- a/resources/wingchunAI.html
+++ b/resources/wingchunAI.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>Michael Ten | Wing Chun AI</title>
-</head>
-
-<body>
-
-    <div style="position:relative; width:100%; height:100vh;">
-        <iframe src="http://student.plkcastar.edu.hk:7860"
-            style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;"></iframe>
-    </div>
-</body>
-
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=http://student.plkcastar.edu.hk:7860">
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="http://student.plkcastar.edu.hk:7860">click here</a>.</p>
+    <p>If you are not redirected, <a href="http://113.28.179.217:7860/">click here</a>.</p>
+  </body>
 </html>
