--- a/resources/wingchunAI.html
+++ b/resources/wingchunAI.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=http://student.plkcastar.edu.hk:7860">
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>If you are not redirected, <a href="http://student.plkcastar.edu.hk:7860">click here</a>.</p>
-    <p>If you are not redirected, <a href="http://113.28.179.217:7860/">click here</a>.</p>
-  </body>
+</head>
+
+<body>
+    <object data="http://student.plkcastar.edu.hk:7860" width="100%" height="500px">
+        <p>Your browser doesn't support embedding objects.</p>
+    </object>
+</body>
+
 </html>
